[WIN32] r31387 for VS2010
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31391 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcxproj
+++ b/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcxproj
@@ -98,13 +98,14 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(OutDir)python24.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
-      <BaseAddress>
-      </BaseAddress>
-      <RandomizedBaseAddress>true</RandomizedBaseAddress>
+      <BaseAddress>0x1e000000</BaseAddress>
+      <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <ImportLibrary>$(OutDir)python24.lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
+      <FixedBaseAddress>
+      </FixedBaseAddress>
     </Link>
     <CustomBuildStep>
       <Command>copy "$(TargetPath)" "$(SolutionDir)..\..\system\python\$(TargetFileName)"</Command>
