[WIN32] sync VS2010 projects with VS2008
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31464 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/.gitignore
+++ b/.gitignore
@@ -330,6 +330,7 @@ config.log
 /system/python/DLLs/select.pyd
 /system/python/DLLs/unicodedata.pyd
 /system/python/DLLs/zlib.pyd
+/system/python/DLLs/bz2.pyd
 
 # /system/webserver
 /system/webserver
